--- a/sparkLearning/pom.xml
+++ b/sparkLearning/pom.xml
@@ -6,11 +6,15 @@
 
     <groupId>org.example</groupId>
     <artifactId>sparkLearning</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>spark-core</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-    
+
 </project>
